force-app/main/default/objects/Vendor_Availability__c/fields/Hour_00__c.field-meta.xml
<CustomField>
    <fullName>Hour_00__c</fullName>
    <defaultValue>false</defaultValue>
    <label>0:00</label>
    <type>Checkbox</type>
</CustomField>