force-app/main/default/objects/Vendor_Availability__c/fields/Hour_01__c.field-meta.xml
<CustomField>
    <fullName>Hour_01__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1:00</label>
    <type>Checkbox</type>
</CustomField>