force-app/main/default/objects/Vendor_Availability__c/fields/Hour_02__c.field-meta.xml
<CustomField>
    <fullName>Hour_02__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2:00</label>
    <type>Checkbox</type>
</CustomField>